--- a/BlogPost1_Indexing.ipynb
+++ b/BlogPost1_Indexing.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "I'm starting a blog based on two books I've been reading, \"Designing Your Life\" (DYL)  by Bill Burnett and Dave Evans and \"Big Magic\" (BM) by Elizabeth Gilbert.  In DYL, the authors encourage the readers to prototype, and take exploratory steps into finding things they like.  In Big Magic, Gilbert encourages readers to not be afraid of their creativity, to put your work out there, and be brave. \n",
     "\n",
-    "For years, I've thought it would be cool to be a data scienest.  That it would be awesome to take data and look at it and find these amazing insights that only I would be able to find.  To exploe these super cool stories that would reveal themselves to me through the data.  I was inspired by some of the more \"pop culture\" center-posts on Nate Silver's 538.  While the political and sports analysis was cool, what I found really interesting was sillier blog posts on the best board games of all time or airplanes and flights times.  (need to find out how to hyperlink stuff)\n",
+    "For years, I've thought it would be cool to be a data scienest.  That it would be awesome to take data and look at it and find these amazing insights that only I would be able to find.  To exploe these super cool stories that would reveal themselves to me through the data.  I was inspired by some of the more \"pop culture\" center-posts on Nate Silver's 538.  While the political and sports analysis was cool, what I found really interesting was sillier blog posts on the best board games of all time or the 5 different types of [Nicolas Cage Movies](https://fivethirtyeight.com/features/the-five-types-of-nicolas-cage-movies/).\n",
     "\n",
     "But I didn't have a plan to become this data driven story teller that I dreamed about.  I'd take some free online courses, take notes, in my notebook, and stop.  I told myself once I knew a litle more, or once I finished another class, I'd be ready to go.  But really, I was scared.  Felt like I could do little bit of code/analysis, but I would never be able to do \"real\" data science. \n",
     "\n",
@@ -25,24 +25,34 @@
     "\n",
     "Right now I'm really interested in the dynamic story narrative aspect of Dungeons and Dragons.  In particuarl, I've been watching Matt Colville's \"Running the Game\" YouTube channel and have been super impressed with how he breaks down how to tell a story. or give people pushes in the right direction.  For example, in one of his first episodes, if the players are hestisant to save the kidnapped blacksmith's daugher from the goblins, have the an elderly grandmother say she'll get her armor and go try and save them.  Chances are the players will feel enough shame, that they will go instead (THIS IS BRILLIANT!) \n",
     "\n",
-    "So if I'm interested in D&D and data analysis, let's combine the two to make sure I stay interested.  "
+    "So if I'm interested in D&D and data analysis, let's combine the two to make sure I stay engaged  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Created a script that generated stats three different ways -roll 3d6 -roll 4d6 (dropping lowest value) -roll 4d6 AND two stats have to >= 15 (Matt Colville Method)\n",
+    "To start off, I created a python script that generates random stats for a 5th edition D&D characters using three different methodolies including:\n",
+    "* Summing 3d6\n",
+    "* Summing 4d6 dropping the lowest value\n",
+    "* Summing 4d6 dropping the lowest value and two statistics are greater than or equal to 15\n",
     "\n",
     "Matt says he likes this method because it helps players discover their characters. But, also having 2 stats greater than 15 ensures that they are special in some one. That they are heros and have something that makes them unique. So main question is, how much better are Matt's generated characters than the other methods?\n",
     "\n",
-    "Other questions (I'm interested in and will help me learn data exploration)\n",
+    "Main Question: How much better are Matt's characters than other characters?\n",
     "\n",
-    "Main: How much better are Matt's characters than other characters?\n",
+    "Other Question: \n",
+    "* What is the correlation between stats (holding RollType constant)? Should be zero, but want to make sure.\n",
+    "* How about correlation between ability and ability modifier? \n",
+    "* Who was the strongest character generated? The weakest?\n",
     "\n",
-    "Other: -What is the correlation between stats (holding RollType constant)? Should be zero, but want to make sure.\n",
-    "-How about correlation between ability and ability modifier? -Who was the strongest character generated? The weakest? -Could I create an if statement mapping stats to the class the character should be?"
+    "But before we get into some of those questions, we need to load the data and learn how to index.  That's what this blog post will be about"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -61,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
