--- a/BlogPost1_Indexing.ipynb
+++ b/BlogPost1_Indexing.ipynb
@@ -4,49 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My First Blog Post\n",
+    "# My First Blog Post (Need Better Title)\n",
     "\n",
-    "I'm starting a blog based on two books I've been reading, \"Designing Your Life\" (DYL)  by Bill Burnett and Dave Evans and \"Big Magic\" (BM) by Elizabeth Gilbert.  In DYL, the authors encourage the readers to prototype, and take exploratory steps into finding things they like.  In Big Magic, Gilbert encourages readers to not be afraid of their creativity, to put your work out there, and be brave. \n",
+    "I'm starting a blog based on advice from two books I've been reading, *Designing Your Life* by Bill Burnett and Dave Evans and \"Big Magic\" by Elizabeth Gilbert. In Designing Your Life, the authors encourage readers to prototype their passions and take exploratory steps to finding work they enjoy. In Big Magic, Gilbert inspires readers not to be afraid of their creativity, but instead asks \"do you have the courage to seek the treasures inside of you?\"  This is my first step.  \n",
     "\n",
-    "For years, I've thought it would be cool to be a data scienest.  That it would be awesome to take data and look at it and find these amazing insights that only I would be able to find.  To exploe these super cool stories that would reveal themselves to me through the data.  I was inspired by some of the more \"pop culture\" center-posts on Nate Silver's 538.  While the political and sports analysis was cool, what I found really interesting was sillier blog posts on the best board games of all time or the 5 different types of [Nicolas Cage Movies](https://fivethirtyeight.com/features/the-five-types-of-nicolas-cage-movies/).\n",
+    "For years, I've thought being a data scientist would be an amazing job.  I would explore unique data sets and discover amazing insights that only I would be able to find.  I was initiatial inspired by some of the more \"pop culture\" centered posts on Nate Silver's 538.  While the political and sports analysis was okay, what I found interesting was more relaxed blog posts on the [worst board games invented](https://fivethirtyeight.com/features/the-worst-board-games-ever-invented/) or the 5 different types of [Nicolas Cage Movies](https://fivethirtyeight.com/features/the-five-types-of-nicolas-cage-movies/).\n",
     "\n",
-    "But I didn't have a plan to become this data driven story teller that I dreamed about.  I'd take some free online courses, take notes, in my notebook, and stop.  I told myself once I knew a litle more, or once I finished another class, I'd be ready to go.  But really, I was scared.  Felt like I could do little bit of code/analysis, but I would never be able to do \"real\" data science. \n",
+    "While this shifted my dream from data scientist to data driven story teller, I still didn't have a plan. I'd take some free online courses, take notes, and then, stop.  I told myself once I knew a litle more, or once I finished another class, I'd be ready to make my first real step.  But really, I was scared.  I felt like I could do a little bit of data analysis, but I would never be able to do anything \"real.\"\n",
     "\n",
-    "But that stops today.  I'm starting this blog to hold myself accountable in becoming a data scientist (although I'll probably be more like a data analyst).  Documenting and explaning what I'm working online will also help me understand it.  The best way to is learn something is to have to be able to teach it.  I might not be 100% right in my explanations, but hopefully will help me figure out how to better understand and the future.  Not going to be perfect, but will give me the opportunity to learn on the way.  "
+    "But that stops today with this blog.  I'm starting this blog to hold myself accountable in becoming a data driven story teller.  The best way to learn something is to be able to explain and teach it.  I might not be right all the time in my explanations, but I have to start somewhere. \n",
+    "\n",
+    "One of the reasons I didn't do well in the past (besides fear) is because I stayed within predefined tutorials on topics I didn't find interesting.  Not only did the tutorials limit my growth by providing scaffolds for getting code up and running, but I'd lose focus on data sets I didn't care about.  So now, I'm going to take Gilbert's advice and explore topics I'm curious about.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My First Topic\n",
+    "## My First Topic\n",
     "\n",
-    "One of the reasons I didn't do well in the past (besides the fear), is because I stayed within predefined tutorials (MOVE THIS to the upper section) didn't find topics that were interesteing.  Well I'm giong to take Gilbert's advice and explore topics that I'm interested in. \n",
+    "Right now, I'm interested in Dungeons and Dragons.  I think it is fascinating how the narrative develops between the players and the Dungeon Master and how anything is possible.  In particular, I've been watching Matt Colville's \"[Running the Game](https://www.youtube.com/channel/UCkVdb9Yr8fc05_VbAVfskCA)\" and have been impressed in how he develops his stories or how he gives his players little pushes if they need them.\n",
     "\n",
-    "Right now I'm really interested in the dynamic story narrative aspect of Dungeons and Dragons.  In particuarl, I've been watching Matt Colville's \"Running the Game\" YouTube channel and have been super impressed with how he breaks down how to tell a story. or give people pushes in the right direction.  For example, in one of his first episodes, if the players are hestisant to save the kidnapped blacksmith's daugher from the goblins, have the an elderly grandmother say she'll get her armor and go try and save them.  Chances are the players will feel enough shame, that they will go instead (THIS IS BRILLIANT!) \n",
     "\n",
-    "So if I'm interested in D&D and data analysis, let's combine the two to make sure I stay engaged  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To start off, I created a python script that generates random stats for a 5th edition D&D characters using three different methodolies including:\n",
-    "* Summing 3d6\n",
+    "For example, in one of his first episodes, if players are hesitant to save the blacksmith's kidnapped son from goblins, Matt recommended to have an eldery grandmother with a walking stick volunteer to go on the rescue mission.  Chances are the players will feel enough shame, that they will go instead.  This is brilliant.  The players still have free choice, but Matt provides a helpful nudge to help get the adventure started.  \n",
+    " \n",
+    "So if I'm interested in D&D and data analysis, by combining the two I can make sure I stay engaged.\n",
+    "\n",
+    "To start off, I created a python script that generates random ability stats (strength, dexterity, etc.) for a 5th edition D&D characters using three different methodologies including:\n",
+    "* Summing 3d6 (Read as: rolling a 6 sided die 3 times)\n",
     "* Summing 4d6 dropping the lowest value\n",
-    "* Summing 4d6 dropping the lowest value and two statistics are greater than or equal to 15\n",
+    "* Summing 4d6 dropping the lowest value and two statistics are greater than or equal to 15 (Colville Method)\n",
     "\n",
-    "Matt says he likes this method because it helps players discover their characters. But, also having 2 stats greater than 15 ensures that they are special in some one. That they are heros and have something that makes them unique. So main question is, how much better are Matt's generated characters than the other methods?\n",
+    "Matt says he likes his method because it helps players discover their characters.  Maybe the player wasn't sure what type of character to play but seeing high scores ability scores in strength but low scores in intellegence pushes them towards a Barbarian.  But because his methodology requires having at least two stats greater than 15 ensures, that their is something about the character that makes them unique.\n",
     "\n",
-    "Main Question: How much better are Matt's characters than other characters?\n",
-    "\n",
-    "Other Question: \n",
-    "* What is the correlation between stats (holding RollType constant)? Should be zero, but want to make sure.\n",
+    "So now that I have a generated a bunch of data reflecting different character creation methodologies, the question is, how much better are Matt's generated characters than the other methods?  This is a just a starting point as I can explore other questions like: \n",
+    "* What is the correlation between stats (holding RollType constant)? It should be near zero, but can I confirm?\n",
     "* How about correlation between ability and ability modifier? \n",
     "* Who was the strongest character generated? The weakest?\n",
     "\n",
-    "But before we get into some of those questions, we need to load the data and learn how to index.  That's what this blog post will be about"
+    "But before I get into questions describing the data, I need to crawl before I can walk.  This blog post will focus on the beginning steps including loading and indexing the data. \n",
+    "\n",
+    "## Reading & Indexing Data"
    ]
   },
   {
@@ -76,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -217,9 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -376,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -621,9 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1101,9 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1252,9 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1325,9 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1407,9 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1498,9 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2104,9 +2084,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3264,9 +3242,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3536,9 +3512,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3808,7 +3782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
