--- a/BlogPost1_Indexing.ipynb
+++ b/BlogPost1_Indexing.ipynb
@@ -42,7 +42,7 @@
     "* How about correlation between ability and ability modifier? \n",
     "* Who was the strongest character generated? The weakest?\n",
     "\n",
-    "But before I get into questions describing the data, I need to crawl before I can walk.  This blog post will focus on the beginning steps including loading and indexing the data. \n",
+    "But before I get into questions describing the data, I need to crawl before I can walk.  This blog post will document my beginning steps including loading and indexing the data. \n",
     "\n",
     "## Reading & Indexing Data"
    ]
@@ -68,7 +68,8 @@
    "outputs": [],
    "source": [
     "#read in data frame\n",
-    "df = pd.read_csv('1000CharSimulated20seed.csv', index_col=0) #Setting index_col at 0 cleans up the data frame"
+    "df = pd.read_csv('1000CharSimulated20seed.csv', \n",
+    "                 index_col=0) #Setting index_col at 0 cleans up the data frame"
    ]
   },
   {
@@ -206,7 +207,7 @@
     }
    ],
    "source": [
-    "#confirm data frame looks okay at the using the head method\n",
+    "#confirm data frame loaded as expected using the head method\n",
     "df.head()"
    ]
   },
@@ -363,7 +364,7 @@
     }
    ],
    "source": [
-    "#confirm data frame looks at the end using the tail method\n",
+    "#confirm data frame loaded as expected using the tail method\n",
     "df.tail(6)"
    ]
   },
@@ -592,7 +593,7 @@
     }
    ],
    "source": [
-    "#take a random sample of the data frame, specifying how many data points you want\n",
+    "#use sample method to spot check that the data looks okay\n",
     "df.sample(10)"
    ]
   },
@@ -602,7 +603,7 @@
    "source": [
     "# Indexing\n",
     "\n",
-    "To some extent, one of the reasons I've struggled retaining what I've learned in python is my confusion over indexing (aka the selction of different value) syntax.  I never remember which comes first, rows or columns which leads to confusion and my code not working how I want it to.  So I'm going to explore three different ways of sampling a pandas data frame.  \n",
+    "One of the reasons I've struggled retaining python knowledge is my confusion over indexing (the selection of different value) syntax.  I never remember the syntax which leads to confusion and my code not working how I want it to.  So I'm going to explore three different ways of sampling a pandas data frame.  \n",
     "* bracket based indexing\n",
     "* .iloc - integer based indexing\n",
     "* .loc - label based indexing\n",
@@ -613,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1074,18 +1077,42 @@
    ],
    "source": [
     "#selecting the first 'strengh' column \n",
-    "df['strength']\n",
-    "\n",
+    "df['strength']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#selecting the strength, constitution, and wisdom column\n",
+    "df[ ['strength','constituion','wisdom'] ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above code is one of the reasons why I have gotten tripped up with indexing in the past.  I find the double brackets confusing as it not clear what is going where.   \n",
+    "\n",
+    "For example, the below code throws an error:\n",
+    "df['strength','constituion','wisdom'] \n",
+    "\n",
+    "To the best of my knowledge, in order to index more than one column, we need to pass a list of the columns names, and then subset that.  \n",
+    "\n",
+    "The list:\n",
+    "['strength','constituion','wisdom']\n",
+    "\n",
+    "How to subset:\n",
+    "df[]\n",
+    "\n",
+    "Putting the two together\n",
     "df[ ['strength','constituion','wisdom'] ]\n",
     "\n",
-    "#the above is why I have gotten tripped up with indexing in the past.  I find the double brackets confusing. \n",
-    "\n",
-    "#the below throws an error\n",
-    "#df['strength','constituion','wisdom'] \n",
-    "\n",
-    "#to the best of my knowledge, column indexing only accepts one input, even if that input has multiple values.  In this case\n",
-    "# we pass a list of the columns we want, which then goes inside the index brackets."
+    "While I was learning this, I found it helpful to have extra spaces between the list and subsetting.  This reminds me that we are using a single list inside brackets.   "
    ]
   },
   {
@@ -1224,15 +1251,38 @@
    ],
    "source": [
     "#selecting rows 0 through 4\n",
-    "df[0:5]\n",
-    "\n",
-    "#the above says, select all columns and then rows 0 through 5 (that's what the \":\" does.  In fact, we don't even need it\n",
-    "#df[0:5] will do the exact same thing).  Notice how the syntax is not inclusive, such that python goes up to row 5, but does\n",
-    "#not include\n",
-    "\n",
+    "df[0:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above codes says, select all columns and then rows 0 through 5 (that's what the \":\" does.  In fact, we don't even need it\n",
+    "as df[0:5] will do the exact same thing). Notice how the syntax is not inclusive, such that python goes up to row 5, but does\n",
+    "not include it.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#selecting rows 112 through 115 (non inclusive)\n",
-    "df[112:115]\n",
-    "\n",
+    "df[112:115]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#selecting rows 2995 until the end\n",
     "df[2995:]"
    ]
@@ -1299,11 +1349,20 @@
     }
    ],
    "source": [
-    "#so if we can select both the columns and the rows, we should be able to combine them to do them at the same time. \n",
+    "#so if we can select the columns and the rows, we should be able to combine them to do them at the same time. \n",
     "\n",
     "#select dexterity column and row 250\n",
-    "df['dexterity'][250]\n",
-    "\n",
+    "df['dexterity'][250]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#select intellegence and wisdom from rows 2890 through 2895\n",
     "df[ ['intellegence','wisdom'] ][2890:2895]"
    ]
@@ -1373,7 +1432,7 @@
     "#But something I get confused on with bracket indexing is that the order doesn't matter.  For example both of the below return\n",
     "#the same thing\n",
     "\n",
-    "#df[ ['intellegence','wisdom'] ][2890:2895]\n",
+    "df[ ['intellegence','wisdom'] ][2890:2895]\n",
     "df[2890:2895][ ['intellegence','wisdom'] ]"
    ]
   },
@@ -1457,15 +1516,34 @@
    ],
    "source": [
     "#return the first 5 rows (or where the index is 0-5 non inclusive)\n",
-    "df.iloc[0:5]\n",
-    "\n",
+    "df.iloc[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#return the first 5 columns\n",
-    "df.iloc[:,0:5]\n",
-    "\n",
+    "df.iloc[:,0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#return rows 5 through 10 AND the first 3 columns\n",
     "df.iloc[5:10, 5:8]\n",
     "\n",
-    "#in other words df.iloc [row start:row end(non inclusive) , column start:column end(non inclusive)]"
+    "#in other words df.iloc \n",
+    "#[row_start:row_end(noninclusive),column_start:column_end(noninclusive)]"
    ]
   },
   {
@@ -1474,13 +1552,15 @@
    "source": [
     "# .loc\n",
     "\n",
-    "Unlike the interger based .iloc, the label based on the *names* of the row and column index.  Unfortunetly, this makes it a little confusing in this example because our row are named with integers.  So it will look similar to our iloc data"
+    "Unlike the interger based .iloc, the label .loc works based on the *names* of the row and column index.  Unfortunetly, this makes it a little confusing in this example because our row are named with integers. This will make it look like our iloc data selections."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2065,8 +2145,17 @@
    ],
    "source": [
     "#select first 5 rows\n",
-    "df.loc[0:5]\n",
-    "\n",
+    "df.loc[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#select all rows, first 5 columns by name\n",
     "df.loc[:,\"RollType\":\"intellegence\"]\n",
     "\n",
@@ -2078,13 +2167,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So now have different ways to index our data by using brackets, .iloc, and .loc methods.  But what if we want to look for data where specific conditions are true?  Then I would have to use boolean indexing."
+    "So now have different ways to index our data by using brackets, .iloc, and .loc. But what if we want to look for data where specific conditions are true?  Then I would have to use boolean indexing.\n",
+    "\n",
+    "Say I really want to play a strong monk character with high wisdom AND high dexterity. Using conditional formatting, I can search for where both of those statements are true (To do boolean indexing you need to use either the brackets or .loc. Because .loc is purely interger based, it won't work)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3227,16 +3320,27 @@
     }
    ],
    "source": [
-    "#say I really want to play a strong monk character with high wisdom AND high dexterity.  \n",
-    "#Using conditional formatting, I can search for where both of those statements are true.  \n",
-    "\n",
-    "#To do boolean indexing need to use either the brackets or .loc (because .loc is purely interger based, it won't work)\n",
-    "\n",
     "#Below returns a series saying where wisdom is true and false.  \n",
-    "df['wisdom'] >= 17\n",
-    "\n",
+    "df['wisdom'] >= 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#We can then use the above to select our data frame for only where wisdom is greater than or equal to 17\n",
-    "df[df['wisdom'] >= 17] #Nice.  But now lets add the dexterity as well!"
+    "df[df['wisdom'] >= 17]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nice.  But now lets add the dexterity as well!"
    ]
   },
   {
@@ -3500,19 +3604,35 @@
     }
    ],
    "source": [
-    "#returns a true/list series where wisdom and dexterity\n",
-    "(df['wisdom'] >= 17) & (df['dexterity'] >= 17)\n",
-    "\n",
+    "#returns a true/list series where wisdom and dexterity are greater than or equal to 17\n",
+    "(df['wisdom'] >= 17) & (df['dexterity'] >= 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#Great, now let's index our data frame by the above true/false series\n",
-    "df[(df['wisdom'] >= 17) & (df['dexterity'] >= 17)]\n",
-    "\n",
-    "#Nice!"
+    "df[(df['wisdom'] >= 17) & (df['dexterity'] >= 17)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So that's conditional selection using brackets, now let's try conditional selection using loc. This time let's say you want to play an intellegent charismatic bard, but, you only want to use Matt Colville's method."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3716,15 +3836,8 @@
     }
    ],
    "source": [
-    "#So that's conditional selection using brackets, now let's try conditional selection using iloc\n",
-    "\n",
-    "#This time let's say you want to play an intellegent charismatic bard, but, you only want to use Matt Colville's method\n",
-    "\n",
     "#first let's create the true/false series \n",
-    "(df['intellegence']>=17) & (df['charisma']>=17) & (df['RollType'] == \"Colville\")  #returns 187 rows\n",
-    "\n",
-    "#then use loc to select what you are looking for\n",
-    "df.loc[(df['intellegence']>=17) & (df['charisma']>=17) & (df['RollType'] == \"Colville\")]"
+    "(df['intellegence']>=17) & (df['charisma']>=17) & (df['RollType'] == \"Colville\")"
    ]
   },
   {
@@ -3735,34 +3848,34 @@
    },
    "outputs": [],
    "source": [
-    "#Now you have your choice of intellegent, charismatic bards using Matt Colville's method. \n",
+    "#then use loc to select what you are looking for\n",
+    "df.loc[(df['intellegence']>=17) & (df['charisma']>=17) & (df['RollType'] == \"Colville\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Now you have your choice of intellegent, charismatic bards using Matt Colville's method. \n",
     "\n",
-    "#I will admit, little confused on why you would use loc over teh normal indexing.  I guess it might make sense if your\n",
-    "#data index was not numbers.  In this example, maybe you wanted to index everything by the characters name.  \n",
-    "#but I think for most of the data I think I'll work with, I'll be okay with the bracket method of indexing.  \n",
-    "\n",
-    "#That being said, if there is a strong reason to use loc over normal bracket indexing please let me know in teh comments\n",
-    "#part of growing and becoming part of the community.  #Briefly looking it up on stack overflow\n",
-    "#suggested loc might useful in a few edge cases, but for the most part they would act the same."
+    "While I'm a little confused about why you would use loc over the normal bracketing indexing, some internet searching suggests that using loc is more explicit and clear.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So what did I did in my maiden voyage blog post.  \n",
-    "\n",
-    "I,\n",
+    "So that's it for my maiden voyage blog post.  In it I:\n",
     "* loaded my data into a dataframe using read_csv()\n",
     "* performed quick checks using .head(), .tail(), and .sample()\n",
     "* explored different types of indexing using brackets, .iloc, and .loc\n",
     "* used boolean indexing to identify where the data met certain conditions \n",
     "\n",
-    "So now that I have a foundation in exploring and indexing data, next time have to look at what the numbers say.  Plannign next post to explore some of the calculations (mean, standard dev, ect), decribe.  \n",
+    "Now that I have a foundation in exploring and indexing data, next time I'll look at what the numbers say through some basic math.  But I'll also do some exploratory data analysis using a visualization package like matplotlib or seaborn.    \n",
     "\n",
-    "But also do some visual exploratory analysis using matplotlib or maybe seaborn. \n",
-    "\n",
-    "Let me know if you have any feedback on any aspect of the blog post as I'm trying to improve both as a writer and as a data analyst.  I wouldn't be surprised if I am a little wrong on some of the technical details."
+    "Let me know if you have any feedback on any aspect of the blog post as I'm trying to improve both as a writer and as a data analyst (I wouldn't be surprised if I'm wrong on some of the technical details).  "
    ]
   }
  ],
