Fix Constitution Spelling Mistake and Rerun

--- a/ColvilleStatGeneration.ipynb
+++ b/ColvilleStatGeneration.ipynb
@@ -30,7 +30,7 @@
     "random.seed(20)\n",
     "\n",
     "#Names for the 6 stats and the 6 modifiers\n",
-    "column_names = ['strength','dexterity','constituion','intellegence','wisdom','charisma',\n",
+    "column_names = ['strength','dexterity','constitution','intellegence','wisdom','charisma',\n",
     "     'str mod', 'dex mod', 'con mod','int mod', 'wis mod','char mod']"
    ]
   },
@@ -127,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#print to CSV\n",
@@ -299,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
