--- a/5E_DnD_Stat_Gen.ipynb
+++ b/5E_DnD_Stat_Gen.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "#initialized lists\n",
-    "abilities = ['strength','dexterity','constituion','intellegence','wisdom','charisma']\n",
-    "column_names = ['RollType',\n",
-    "     'strength','dexterity','constituion','intellegence','wisdom','charisma',\n",
+    "abilities = ['strength','dexterity','constitution','intellegence','wisdom','charisma']\n",
+    "column_names = ['roll_type',\n",
+    "     'strength','dexterity','constitution','intellegence','wisdom','charisma',\n",
     "     'str mod','dex mod','con mod','int mod', 'wis mod','char mod']"
    ]
   },
@@ -199,76 +199,74 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      RollType  strength  dexterity  constituion  intellegence  wisdom  \\\n",
-      "0          3D6        14         15            9             7       6   \n",
-      "1          3D6        13          7           15             8      15   \n",
-      "2          3D6         8          4           11            12      10   \n",
-      "3          3D6        10          8           12             8      15   \n",
-      "4          3D6        11         11           12             9      12   \n",
-      "5          3D6         8          8            5            10      16   \n",
-      "6          3D6         9         10            5            12       7   \n",
-      "7          3D6        10          5           16             4      17   \n",
-      "8          3D6         8          7            6             6      11   \n",
-      "9          3D6         7         11            8            10      11   \n",
-      "10         3D6         8         12            9            10       9   \n",
-      "11         3D6        13          9           11             3      10   \n",
-      "12         3D6        11         10            9            14      11   \n",
-      "13         3D6        12          7           11             8       6   \n",
-      "14         3D6         7         10            9            12       8   \n",
-      "15         3D6        10         15           14            17       9   \n",
-      "16         3D6        11         16            8            12      13   \n",
-      "17         3D6        17         10           12             9      12   \n",
-      "18         3D6        10          6           12             8      11   \n",
-      "19         3D6         6          8            7            12      17   \n",
-      "20         3D6        11         14           10            15       6   \n",
-      "21         3D6        10          8           12            10      11   \n",
-      "22         3D6         8         13           12             8       8   \n",
-      "23         3D6        13          8           11             8      11   \n",
-      "24         3D6        12         13           10            11      16   \n",
-      "25         3D6         7          7           16            11      13   \n",
-      "26         3D6        10          5            9            12      13   \n",
-      "27         3D6        12          6           13             9       8   \n",
-      "28         3D6         8         16           11             7      13   \n",
-      "29         3D6        11          6            5             7      16   \n",
-      "...        ...       ...        ...          ...           ...     ...   \n",
-      "2970  Colville        14         14           14            11      16   \n",
-      "2971  Colville        15          9           16            15      12   \n",
-      "2972  Colville        10         10           10            11      15   \n",
-      "2973  Colville        15         16            9            18      14   \n",
-      "2974  Colville        13         12           15             8      16   \n",
-      "2975  Colville        16         12           13             8      17   \n",
-      "2976  Colville        15         15           14            14      11   \n",
-      "2977  Colville        11         15            7            14      10   \n",
-      "2978  Colville        12         11           11            15      17   \n",
-      "2979  Colville        17         16           15            10      16   \n",
-      "2980  Colville        13         15            8            15      12   \n",
-      "2981  Colville        15         12           12             8      14   \n",
-      "2982  Colville        15         15            8            15       8   \n",
-      "2983  Colville        10         16            8            15      17   \n",
-      "2984  Colville        15         12           11            11      18   \n",
-      "2985  Colville        16         15            9            15      10   \n",
-      "2986  Colville        15         11           15            13      17   \n",
-      "2987  Colville        14         12           16            15      17   \n",
-      "2988  Colville        15         12           11             8      16   \n",
-      "2989  Colville         9         15           16             9      13   \n",
-      "2990  Colville        16         16           13            16       6   \n",
-      "2991  Colville        17         14           11            12      17   \n",
-      "2992  Colville        16         11           17             6      13   \n",
-      "2993  Colville        15         14           13             9      15   \n",
-      "2994  Colville        13          9           12            14      18   \n",
-      "2995  Colville        13         17           16            15      11   \n",
-      "2996  Colville        15         15            8            14       9   \n",
-      "2997  Colville         9         15           11            14      12   \n",
-      "2998  Colville        15          8           16            10      10   \n",
-      "2999  Colville        10         16           18            14      12   \n",
+      "     roll_type  strength  dexterity  constitution  intellegence  wisdom  \\\n",
+      "0          3D6        14         15             9             7       6   \n",
+      "1          3D6        13          7            15             8      15   \n",
+      "2          3D6         8          4            11            12      10   \n",
+      "3          3D6        10          8            12             8      15   \n",
+      "4          3D6        11         11            12             9      12   \n",
+      "5          3D6         8          8             5            10      16   \n",
+      "6          3D6         9         10             5            12       7   \n",
+      "7          3D6        10          5            16             4      17   \n",
+      "8          3D6         8          7             6             6      11   \n",
+      "9          3D6         7         11             8            10      11   \n",
+      "10         3D6         8         12             9            10       9   \n",
+      "11         3D6        13          9            11             3      10   \n",
+      "12         3D6        11         10             9            14      11   \n",
+      "13         3D6        12          7            11             8       6   \n",
+      "14         3D6         7         10             9            12       8   \n",
+      "15         3D6        10         15            14            17       9   \n",
+      "16         3D6        11         16             8            12      13   \n",
+      "17         3D6        17         10            12             9      12   \n",
+      "18         3D6        10          6            12             8      11   \n",
+      "19         3D6         6          8             7            12      17   \n",
+      "20         3D6        11         14            10            15       6   \n",
+      "21         3D6        10          8            12            10      11   \n",
+      "22         3D6         8         13            12             8       8   \n",
+      "23         3D6        13          8            11             8      11   \n",
+      "24         3D6        12         13            10            11      16   \n",
+      "25         3D6         7          7            16            11      13   \n",
+      "26         3D6        10          5             9            12      13   \n",
+      "27         3D6        12          6            13             9       8   \n",
+      "28         3D6         8         16            11             7      13   \n",
+      "29         3D6        11          6             5             7      16   \n",
+      "...        ...       ...        ...           ...           ...     ...   \n",
+      "2970  Colville        14         14            14            11      16   \n",
+      "2971  Colville        15          9            16            15      12   \n",
+      "2972  Colville        10         10            10            11      15   \n",
+      "2973  Colville        15         16             9            18      14   \n",
+      "2974  Colville        13         12            15             8      16   \n",
+      "2975  Colville        16         12            13             8      17   \n",
+      "2976  Colville        15         15            14            14      11   \n",
+      "2977  Colville        11         15             7            14      10   \n",
+      "2978  Colville        12         11            11            15      17   \n",
+      "2979  Colville        17         16            15            10      16   \n",
+      "2980  Colville        13         15             8            15      12   \n",
+      "2981  Colville        15         12            12             8      14   \n",
+      "2982  Colville        15         15             8            15       8   \n",
+      "2983  Colville        10         16             8            15      17   \n",
+      "2984  Colville        15         12            11            11      18   \n",
+      "2985  Colville        16         15             9            15      10   \n",
+      "2986  Colville        15         11            15            13      17   \n",
+      "2987  Colville        14         12            16            15      17   \n",
+      "2988  Colville        15         12            11             8      16   \n",
+      "2989  Colville         9         15            16             9      13   \n",
+      "2990  Colville        16         16            13            16       6   \n",
+      "2991  Colville        17         14            11            12      17   \n",
+      "2992  Colville        16         11            17             6      13   \n",
+      "2993  Colville        15         14            13             9      15   \n",
+      "2994  Colville        13          9            12            14      18   \n",
+      "2995  Colville        13         17            16            15      11   \n",
+      "2996  Colville        15         15             8            14       9   \n",
+      "2997  Colville         9         15            11            14      12   \n",
+      "2998  Colville        15          8            16            10      10   \n",
+      "2999  Colville        10         16            18            14      12   \n",
       "\n",
       "      charisma  str mod  dex mod  con mod  int mod  wis mod  char mod  \n",
       "0            9        2        2       -1       -2       -2        -1  \n",
@@ -378,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
